--- a/project/02-02/res/style.css
+++ b/project/02-02/res/style.css
@@ -57,7 +57,7 @@ aside {
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 100vh;
+    min-height: 100dvh;
     padding: 15px;
     background: #eceff1;
 }
