--- a/project/01-01/res/style.css
+++ b/project/01-01/res/style.css
@@ -40,7 +40,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.618em;
     background: #fafafa;
