--- a/project/01-04/res/dashboard.css
+++ b/project/01-04/res/dashboard.css
@@ -46,7 +46,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.618em;
     background: #fafafa;
@@ -64,7 +64,7 @@ body {
 }
 
 .profile::after {
-    content: "";
+    content: '';
     display: block;
     clear: both;
 }
