--- a/project/03/res/style.css
+++ b/project/03/res/style.css
@@ -57,7 +57,7 @@ body {
     margin: 0;
     padding: 15px;
     text-align: center;
-    font-family: "Questrial", sans-serif;
+    font-family: 'Questrial', sans-serif;
     font-size: 16px;
     line-height: 1.618em;
     background: #eceff1;
@@ -76,7 +76,7 @@ button {
     left: 0;
     z-index: 250;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100dvh;
     background: #eceff1;
     box-shadow: 0 5px 50px #aaa;
@@ -92,7 +92,7 @@ button {
 
 .splash .center h1 {
     margin: 0 0 20px;
-    font-family: "Sigmar One", cursive;
+    font-family: 'Sigmar One', cursive;
     font-size: 3em;
     font-weight: normal;
     color: #7879b9;
@@ -122,7 +122,7 @@ button {
     left: 0;
     z-index: 300;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100dvh;
     background: #eceff1;
 }
