--- a/res/style.css
+++ b/res/style.css
@@ -41,7 +41,7 @@ body {
     margin: 0;
     padding: 30px;
     text-align: center;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.618em;
     color: #424242;
